--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lapisdb_viewer",
+  "name": "lapisdb_observatory",
   "version": "0.0.1",
   "description": "A web data observer for LapisDB",
   "main": "build/serve.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kekland/lapisdb_viewer.git"
+    "url": "git+https://github.com/kekland/lapisdb_observatory.git"
   },
   "keywords": [
     "lapisdb",
@@ -19,11 +19,15 @@
   "author": "kekland <kk.erzhan@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kekland/lapisdb_viewer/issues"
+    "url": "https://github.com/kekland/lapisdb_observatory/issues"
   },
-  "homepage": "https://github.com/kekland/lapisdb_viewer#readme",
+  "homepage": "https://github.com/kekland/lapisdb_observatory#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "lapisdb": "^0.1.8"
+    "express-prettify": "^0.1.1",
+    "lapisdb": "^0.1.9"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.0"
   }
 }
