--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A web data observer for LapisDB",
   "main": "build/serve.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rimraf dist && tsc"
   },
   "repository": {
     "type": "git",
