--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
   "homepage": "https://github.com/kekland/lapisdb_observatory#readme",
   "dependencies": {
     "@advanced-rest-client/json-viewer": "^3.0.0",
+    "axios": "^0.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-prettify": "^0.1.1",
     "lapisdb": "^0.1.9"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.5",
     "@types/express": "^4.17.0",
     "rimraf": "^2.6.3"
   }
